--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Ian Huang | Aspiring Data Scientist
+    Ian Huang | Medical Doctor | Aspiring Data Scientist
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
