--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
   <!-- Put your site title here -->
   <title>
-    Ian Huang | Aspiring Data Scientist
+    Ian Huang | Medical Doctor | Aspiring Data Scientist
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
+  <meta name="description" content="I am a medical doctor with 6+ years of clinical experience. I code as a hobby, and I hope to utilize my passion in medicine and coding to improve healthcare.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="keywords" content="Ian Huang, medicine, Python, data science" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -41,8 +41,8 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#work" class="nav__link">Portfolio</a></li>
+          <!-- <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li> -->
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -59,7 +59,7 @@
           <span>Ian Huang</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Aspiring Data Scientist</p>
+        <p>Medical Doctor | Aspiring Data Scientist</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -71,104 +71,96 @@
 
     <section class="work" id="work">
       <div class="row">
-        <h2>My Work</h2>
+        <h2>My Portfolio</h2>
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Work Experience</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                  <!-- Work Experience Summary Here-->
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Resident Physician / IT Champion | Singhealth | Singapore | 2021-2023</li>
+                <li>Family Medicine Resident | Ministry of Health | Singapore | 2017-2021</li>
+                <li>Research Assistant | Chang Gung Memorial Hospital | Taiwan | 2012-2013</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                <a href="C:\Users\ih371\OneDrive\Documents\Certificates\Resume_vR_2024.pdf" target="_blank" class="link__text">
+                  My Resume
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/singhealth.jpg" class="work__image" alt="Project 1" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Education</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                <!-- Education Summary Here -->
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Duke-NUS Medical School | Singapore | 2013-2017 | Doctor of Medicine (MD)</li>
+                <li>Boston University | USA | 2008-2012 | Bachelor of Arts in Biochemistry and Molecular Biology</li>
               </ul>
-
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="C:\Users\ih371\OneDrive\Documents\Certificates\MD.jpg" class="work__image" alt="MD" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>Github</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Explore my passion for Python and data science through my personal projects showcased on my Github.
               </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://github.com/ih371990/Portfolio" class="link__text">
                   Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="C:\Users\ih371\OneDrive\Documents\Certificates\github.jpg" class="work__image" alt="Github" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Tableau</h3>
+              <p>
+                Explore my data visualizations showcased on my Tableau.
+              </p>
+
+              <div class="work__links">
+                <a href="https://public.tableau.com/app/profile/ih371990/vizzes" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/tableau.jpg" class="work__image" alt="Tableau" />
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ***** Clients ***** -->
+    <!-- ***** Clients ***** 
 
     <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
+           Add logos of the clients or companies you'have worked with.
           <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
@@ -178,7 +170,7 @@
         </div>
       </div>
     </section>
-
+  -->
     <!-- ***** About ***** -->
 
     <section class="about" id="about">
@@ -188,18 +180,15 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              I am a medical doctor with 6+ years of clinical experience. I spend my free time dabbling in Python, SQL, and Tableau. I hope to utilize my expertise in medicine and passion for coding and data in my future endeavors. At the moment, I am exploring machine learning and teaching myself tensorflow.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="C:\Users\ih371\OneDrive\Documents\Certificates\Resume_vR_2024.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/profile_50.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -213,15 +202,11 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
+          If you would like to connect with me, ask me questions, or just get in touch - the quickest way to reach out to
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:ih371990@gmail.com" class="btn">ih371990@gmail.com</a>
       </div>
     </div>
   </section>
@@ -233,23 +218,18 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/ih371990" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
+          <a href="https://www.linkedin.com/in/ih371990">
+            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
-            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+          <a href="https://public.tableau.com/app/profile/ih371990/vizzes">
+            <img src="./images/TableauLogo_RGB.png" title="Link to Tableau Profile" class="footer__social-image" alt="Tableau">
           </a>
         </li>
       </ul>
@@ -258,15 +238,8 @@
       <p>
         &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
       </p>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
     </div>
   </footer>
-
   <a href="#top" class="back-to-top" title="Back to Top">
     <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
