--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="C:\Users\ih371\OneDrive\Documents\Certificates\Resume_vR_2024.pdf" target="_blank" class="link__text">
+                <a href="./images/Resume_vR_2024.pdf" target="_blank" class="link__text">
                   My Resume
                 </a>
               </div>
@@ -111,7 +111,7 @@
               </ul>
             </div>
             <div class="work__image-box">
-              <img src="C:\Users\ih371\OneDrive\Documents\Certificates\MD.jpg" class="work__image" alt="MD" />
+              <img src=".images/MD.jpg" class="work__image" alt="MD" />
             </div>
           </div>
 
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="C:\Users\ih371\OneDrive\Documents\Certificates\github.jpg" class="work__image" alt="Github" />
+              <img src=".images/github.jpg" class="work__image" alt="Github" />
             </div>
           </div>
 
@@ -183,7 +183,7 @@
               I am a medical doctor with 6+ years of clinical experience. I spend my free time dabbling in Python, SQL, and Tableau. I hope to utilize my expertise in medicine and passion for coding and data in my future endeavors. At the moment, I am exploring machine learning and teaching myself tensorflow.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="C:\Users\ih371\OneDrive\Documents\Certificates\Resume_vR_2024.pdf" class="btn">My Resume</a>
+            <a href=".images/Resume_vR_2024.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
