--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </ul>
             </div>
             <div class="work__image-box">
-              <img src=".images/MD.jpg" class="work__image" alt="MD" />
+              <img src="./images/MD.jpg" class="work__image" alt="MD" />
             </div>
           </div>
 
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src=".images/github.jpg" class="work__image" alt="Github" />
+              <img src="./images/github.jpg" class="work__image" alt="Github" />
             </div>
           </div>
 
