--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               I am a medical doctor with 6+ years of clinical experience. I spend my free time dabbling in Python, SQL, and Tableau. I hope to utilize my expertise in medicine and passion for coding and data in my future endeavors. At the moment, I am exploring machine learning and teaching myself tensorflow.
             </p>
             <!-- Provide a link to your resume -->
-            <a href=".images/Resume_vR_2024.pdf" class="btn">My Resume</a>
+            <a href="./images/Resume_vR_2024.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
